# GPS_SERVER

./: BusServer  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bus_server_log.0  bus_server_log.1  bus_server_log.2  cmake_install.cmake  export.sh  log.txt  log4crc
include/: crc_itu.h  dispatcher.h  engine.h  gps_user.h  listener.h  logger.h  msg.h
lib/: libsqora.so.11.1
opensource/log4c-1.2.4/: Makefile  config.status  libtool
opensource/log4c-1.2.4/config/: Makefile
opensource/log4c-1.2.4/doc/: Makefile
opensource/log4c-1.2.4/examples/: Makefile  application_1  application_2  application_3
opensource/log4c-1.2.4/examples/.libs/: application_1  application_2  application_3
opensource/log4c-1.2.4/examples/helloworld/: Makefile  helloworld
opensource/log4c-1.2.4/examples/helloworld/.libs/: helloworld
opensource/log4c-1.2.4/examples/helloworld1/: Makefile  helloworld1
opensource/log4c-1.2.4/examples/helloworld1/.libs/: helloworld1
opensource/log4c-1.2.4/src/: Makefile
opensource/log4c-1.2.4/src/log4c/: Makefile
opensource/log4c-1.2.4/src/log4c/.deps/: appender.Plo  category.Plo  (+18 more)
opensource/log4c-1.2.4/src/sd/: Makefile
opensource/log4c-1.2.4/tests/: Makefile
opensource/log4c-1.2.4/tests/log4c/: Makefile
oracle_test/: OCCIConnect.cpp  gps_info.h  main.cpp  make.sh  test.cpp
src/: crc_itu.c  dispatcher.c  engine.c  gps_user.c  listener.c  logger.c  main.c  msg.c
tmp/: BGPSInfo.java  BGPSInfoDao.java  addRoute.jsp  editRoute.jsp  routeAggregateList.jsp  routeList.jsp
tmp/bage_doc/SSL/Apache/: server.crt
tmp/bage_doc/SSL/IIS/: server.pfx
tmp/bage_doc/SSL/Nginx/: server.key  server.pem
tmp/bage_doc/SSL/Tomcat/: keystore.jks
(+3 files in other folders)
